--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       <p class="albintxt">I 💚 Coding & Designing.</p>
     </div>
 
-    <div class="navbarInside">
+     <div class="navbarInside">
       <nav class="navbar navbar-expand-lg navbar-dark data-bs-theme=dark">
         <a class="navbar-brand" href="./index.html">My Portfolio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
