--- a/experience.html
+++ b/experience.html
@@ -40,7 +40,7 @@
             transform: translateY(-50%);
             font-family: 'Pacifico', cursive;
             font-size: 48px;
-            color: #ffcc00;
+            color: #48ff00;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
