--- a/index.html
+++ b/index.html
@@ -79,14 +79,6 @@
           <table class="skillFonts">
             <tr>
               <td>
-                UX
-              </td>
-              <td>
-                UI
-              </td>
-            </tr>
-            <tr>
-              <td>
                 HTML
               </td>
               <td>
@@ -95,41 +87,59 @@
             </tr>
             <tr>
               <td>
+                Bootstrap
+              </td>
+              <td>
+                EJS
+              </td>
+              <td>
+                npm
+              </td>
+            </tr>
+            <tr>
+              <td>
                 Javascript
               </td>
               <td>
-                .......
+                Mongo DB
               </td>
+              <td>
+                Node              
+              </td>
+               <td>
+                Express              
+              </td>
+              
             </tr>
           </table>
         </div>
 
         <div class="skill-row">
           <img class="gif2 circular" src="images/giphy2.gif" alt="">
-          <h3 class="skills-1">Python Development</h3>
+          <h3 class="skills-1">UX Designing</h3>
           <table class="skillFonts">
             <tr>
               <td>
-                Django
+                User Personas
               </td>
               <td>
-                .......
-              </td>
-            </tr>
-            <tr>
-              <td>
-                .......
-              </td>
-              <td>
-                .......
+                User Journey Map
               </td>
             </tr>
             <tr>
               <td>
-                .......
+                Competitive Analysis
               </td>
               <td>
-                .......
+                Wireframes
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Lo-fi & Hi-fi Prototypes
+              </td>
+              <td>
+                Case Study
               </td>
             </tr>
           </table>
@@ -154,10 +164,16 @@
               <td>
                 Photoshop
               </td>
+              <td>
+                Notion
+              </td>
             </tr>
             <tr>
               <td>
                 VS code
+              </td>
+               <td>
+                Postman
               </td>
               <td>
                 .......
