--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
               <td>
                 CSS
               </td>
-            </tr>
-            <tr>
               <td>
                 Bootstrap
               </td>
+            </tr>
+            <tr>
               <td>
                 EJS
               </td>
               <td>
                 npm
               </td>
-            </tr>
-            <tr>
               <td>
                 Javascript
               </td>
+            </tr>
+            <tr>
               <td>
                 Mongo DB
               </td>
@@ -123,7 +123,7 @@
                 User Personas
               </td>
               <td>
-                User Journey Map
+                Journey Maps
               </td>
             </tr>
             <tr>
@@ -136,7 +136,7 @@
             </tr>
             <tr>
               <td>
-                Lo-fi & Hi-fi Prototypes
+                Lo-fi & Hi-fi
               </td>
               <td>
                 Case Study
@@ -156,6 +156,9 @@
               <td>
                 Figma
               </td>
+              <td>
+                Notion
+              </td>
             </tr>
             <tr>
               <td>
@@ -164,9 +167,7 @@
               <td>
                 Photoshop
               </td>
-              <td>
-                Notion
-              </td>
+              
             </tr>
             <tr>
               <td>
